objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>CRM APO</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Business Review Blocked</fullName>
        </values>
        <values>
            <fullName>Business Review Completed</fullName>
        </values>
        <values>
            <fullName>Business Review In Progress</fullName>
        </values>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting for Response</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Case Study</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1st Approval</fullName>
        </values>
        <values>
            <fullName>Assessment Complete</fullName>
        </values>
        <values>
            <fullName>Assessment in Progress</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Design</fullName>
        </values>
        <values>
            <fullName>Final Approval</fullName>
        </values>
        <values>
            <fullName>In Final Review</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>Interview Complete</fullName>
        </values>
        <values>
            <fullName>Interview Scheduled</fullName>
        </values>
        <values>
            <fullName>Live</fullName>
        </values>
        <values>
            <fullName>Marketing Introduced</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Writing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Copado support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting customer feedback</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Hold - awaiting feedback</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Request Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Process</fullName>
        <description>Support Process for Sales Cases.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting customer feedback</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Process</fullName>
        <description>Support Process for Support Cases.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting customer feedback</fullName>
        </values>
        <values>
            <fullName>Closed - Bug fix submitted</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed - Feature Request</fullName>
        </values>
        <values>
            <fullName>Closed - No response from customer</fullName>
        </values>
        <values>
            <fullName>Closed - Out of scope</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>Closed - Routed to internal helpdesk</fullName>
        </values>
        <values>
            <fullName>Closed - Spam</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Hold - awaiting feedback</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Acceptance__c</fullName>
        <label>Acceptance</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Access_Code__c</fullName>
        <inlineHelpText>This field is used by customers to enter their premier access code.</inlineHelpText>
        <label>Access Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Working_Business_Hours__c</fullName>
        <description>This Formula Field get the Working Business Hour value from Account on Case UI</description>
        <formula>Account.Working_Business_Hours__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Working Business Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Module__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Authentication</fullName>
                </value>
                <value>
                    <fullName>Run Tests</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Refresh Cache</fullName>
                </value>
                <value>
                    <fullName>Manage Git Branches</fullName>
                </value>
                <value>
                    <fullName>Retrieve Commits</fullName>
                </value>
                <value>
                    <fullName>Create Deployment</fullName>
                </value>
                <value>
                    <fullName>Full Snapshot</fullName>
                </value>
                <value>
                    <fullName>Commit Changes</fullName>
                </value>
                <value>
                    <fullName>YAML Files</fullName>
                </value>
                <value>
                    <fullName>Filters</fullName>
                </value>
                <value>
                    <fullName>Variables</fullName>
                </value>
                <value>
                    <fullName>Mass Back Promote</fullName>
                </value>
                <value>
                    <fullName>Promote</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
                <value>
                    <fullName>User Stories</fullName>
                </value>
                <value>
                    <fullName>Pipeline Connections</fullName>
                </value>
                <value>
                    <fullName>Environment Variables</fullName>
                </value>
                <value>
                    <fullName>Connection Behaviors</fullName>
                </value>
                <value>
                    <fullName>Quality Gates</fullName>
                </value>
                <value>
                    <fullName>Metadata Groups</fullName>
                </value>
                <value>
                    <fullName>Salesforce Deployment Error</fullName>
                </value>
                <value>
                    <fullName>Copado Deployment Error</fullName>
                </value>
                <value>
                    <fullName>Deployment Status</fullName>
                </value>
                <value>
                    <fullName>Deployment Step</fullName>
                </value>
                <value>
                    <fullName>Find and Replace</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Manual Task</fullName>
                </value>
                <value>
                    <fullName>Pull Request</fullName>
                </value>
                <value>
                    <fullName>Conflict Awareness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Results__c</fullName>
        <label>Actual Results</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Affected_Certificate_Name__c</fullName>
        <description>Contains the name of affected certificate in academy cases.</description>
        <label>Affected Certificate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affected_Module_Name__c</fullName>
        <description>Contains the name of the affected module in academy cases.</description>
        <label>Affected Module Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affected_Records__c</fullName>
        <inlineHelpText>Please provide any links to affected records and/or record IDs.  Record IDs are preferred over names.</inlineHelpText>
        <label>Affected Records</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anticipated_Time_Investment__c</fullName>
        <inlineHelpText>Please provide how many hours this request will take to complete.</inlineHelpText>
        <label>Anticipated Time Investment</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Impact_Critical_Functionality__c</fullName>
        <defaultValue>&quot;Does this affect critical application functionality?&quot;</defaultValue>
        <label>Business Impact - Critical Functionality</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Impact_Data_Integrity__c</fullName>
        <defaultValue>&quot;Does this affect data integrity?&quot;</defaultValue>
        <label>Business Impact - Data Integrity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Impact_Functionality__c</fullName>
        <defaultValue>&quot;What business functionality are you unable to perform?&quot;</defaultValue>
        <label>Business Impact - Functionality</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Impact_Users__c</fullName>
        <defaultValue>&quot;What % of your users are affected?&quot;</defaultValue>
        <label>Business Impact - Users</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Impact_Workaround__c</fullName>
        <defaultValue>&quot;Do you have a viable workaround?&quot;</defaultValue>
        <label>Business Impact - Workaround</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Impact__c</fullName>
        <defaultValue>&quot;1) What % of your users are affected?&quot;&amp;BR()&amp;
&quot;2) Does this affect data integrity?&quot;&amp;BR()&amp;
&quot;3) Do you have a viable workaround?&quot;&amp;BR()&amp;
&quot;4) Does this affect critical application functionality?&quot;&amp;BR()&amp;
&quot;5) What business functionality are you unable to perform?&quot;</defaultValue>
        <label>Business Impact</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Process__c</fullName>
        <description>Created to define the Business Process owner of APO Requests (US-0025845)</description>
        <label>Business Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Community - Academy Certification Objects</fullName>
                </value>
                <value>
                    <fullName>Community - AC Events</fullName>
                </value>
                <value>
                    <fullName>Community - Achievements</fullName>
                </value>
                <value>
                    <fullName>Community - Appinium</fullName>
                </value>
                <value>
                    <fullName>Community - Coupon</fullName>
                </value>
                <value>
                    <fullName>Community - Coupon Request</fullName>
                </value>
                <value>
                    <fullName>Community - Ideas</fullName>
                </value>
                <value>
                    <fullName>Community - Listing (DevOps Exchange)</fullName>
                </value>
                <value>
                    <fullName>Community - Listing Detail</fullName>
                </value>
                <value>
                    <fullName>Community - Success App</fullName>
                </value>
                <value>
                    <fullName>Customer Success</fullName>
                </value>
                <value>
                    <fullName>Finance - Pricebook, CPQ and Kugamon</fullName>
                </value>
                <value>
                    <fullName>Finance - Quote/Order/Contract/Invoice</fullName>
                </value>
                <value>
                    <fullName>Marketing - Campaign</fullName>
                </value>
                <value>
                    <fullName>Marketing - Lead</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Engineering - Action Plan</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Engineering - Applications</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Engineering - Copado Work Management System</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Engineering - Deployment</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Engineering - Environments</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Engineering - Epic</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Engineering - Feature</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Engineering - Module</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Engineering - Pipeline</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Engineering - Project</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Engineering - Promotion</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Engineering - Release</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Engineering - Sprint</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Engineering - User Story/User Story Tasks</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Engineering - Value Stream Maps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Area__c</fullName>
        <description>Classification of cases.</description>
        <label>Case Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado Core</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Continuous Integration</fullName>
                </value>
                <value>
                    <fullName>Branch Management</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Licenses</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Copado Integrations</fullName>
                </value>
                <value>
                    <fullName>Selenium Testing</fullName>
                </value>
                <value>
                    <fullName>Account and Licensing</fullName>
                </value>
                <value>
                    <fullName>Copado Permissioner</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Copado DX</fullName>
                </value>
                <value>
                    <fullName>Vlocity</fullName>
                </value>
                <value>
                    <fullName>Academy</fullName>
                </value>
                <value>
                    <fullName>Certifications</fullName>
                    <isActive>false</isActive>
                    <label>Certifications</label>
                </value>
                <value>
                    <fullName>Playgrounds</fullName>
                    <isActive>false</isActive>
                    <label>Playgrounds</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Feature__c</fullName>
        <label>Case Feature</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Git Snapshot</fullName>
                </value>
                <value>
                    <fullName>Org Credentials</fullName>
                </value>
                <value>
                    <fullName>Org Differences</fullName>
                </value>
                <value>
                    <fullName>Snapshot Differences</fullName>
                </value>
                <value>
                    <fullName>Git Repositories</fullName>
                </value>
                <value>
                    <fullName>Git Snapshots</fullName>
                </value>
                <value>
                    <fullName>Deployments</fullName>
                </value>
                <value>
                    <fullName>Environments</fullName>
                </value>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>Sprints</fullName>
                </value>
                <value>
                    <fullName>User Stories</fullName>
                </value>
                <value>
                    <fullName>Promotions</fullName>
                </value>
                <value>
                    <fullName>Continuous Integrations</fullName>
                </value>
                <value>
                    <fullName>Pre/Post Build Automation</fullName>
                </value>
                <value>
                    <fullName>Permissions &amp; Notifications</fullName>
                </value>
                <value>
                    <fullName>Deployment Flows</fullName>
                </value>
                <value>
                    <fullName>Branch Management Permissions</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>Permissions</fullName>
                </value>
                <value>
                    <fullName>Authentication</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Copado License Manager</fullName>
                </value>
                <value>
                    <fullName>Transactions</fullName>
                </value>
                <value>
                    <fullName>Features</fullName>
                </value>
                <value>
                    <fullName>API Key</fullName>
                </value>
                <value>
                    <fullName>Personas</fullName>
                </value>
                <value>
                    <fullName>Scheduled Jobs</fullName>
                </value>
                <value>
                    <fullName>Kanban Boards</fullName>
                </value>
                <value>
                    <fullName>Epics</fullName>
                </value>
                <value>
                    <fullName>Test Scripts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_Me__c</fullName>
        <description>Check whether the case is created by current login user.</description>
        <formula>IF($User.Id = CreatedById, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_behavior__c</fullName>
        <inlineHelpText>What is happening when you take the step listed above?</inlineHelpText>
        <label>Current behavior</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback__c</fullName>
        <description>Level of satisfaction of the customer with the support given, if any.</description>
        <label>Customer Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Not satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Health__c</fullName>
        <formula>Account.Account_Health_Color__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Resource_Required__c</fullName>
        <description>This field represents the date the resource is needed.</description>
        <inlineHelpText>This field represents the date the resource is needed.</inlineHelpText>
        <label>Date Resource Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Timezone__c</fullName>
        <label>Delivery Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EST (Eastern)</fullName>
                </value>
                <value>
                    <fullName>CST (Central)</fullName>
                </value>
                <value>
                    <fullName>PST (Pacific)</fullName>
                </value>
                <value>
                    <fullName>CEST (Central European)</fullName>
                </value>
                <value>
                    <fullName>IST (Indian Standard)</fullName>
                </value>
                <value>
                    <fullName>MST (Mountain)</fullName>
                </value>
                <value>
                    <fullName>BST (British Summer)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Rich__c</fullName>
        <description>Contains the rich description of case.</description>
        <label>Description(Rich)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date_Override_Justification__c</fullName>
        <inlineHelpText>If the requested Due Date breaks the SLA, a justification must be provided.</inlineHelpText>
        <label>Due Date Override Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Extra_Text__c</fullName>
        <description>Extra text to be included in the custom templates.</description>
        <label>Email Extra Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_message_you_are_receiving__c</fullName>
        <inlineHelpText>Please include any error messages you receive. You can attach screenshots using the Add Attachments feature at the bottom of this form.</inlineHelpText>
        <label>Error message you are receiving</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expected_behavior__c</fullName>
        <inlineHelpText>What do you expect to happen when you take the steps listed above?</inlineHelpText>
        <label>Expected behavior</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback_Reason__c</fullName>
        <description>Text Feedback given by customer</description>
        <label>Feedback Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hours_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is populated from related records (MC Project / Meeting) to track the actual duration of the request.</description>
        <label>Hours Actual</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Estimated__c</fullName>
        <inlineHelpText>Please indicate the number of hours this request is estimated to have?</inlineHelpText>
        <label>Hours Estimated</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Requested__c</fullName>
        <inlineHelpText>Please indicate the requested duration (in hours) this request will have.</inlineHelpText>
        <label>Hours Requested</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IR_number__c</fullName>
        <label>#IR number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impacted_Area__c</fullName>
        <description>Contains the impacted area of case.</description>
        <label>Impacted Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Premier_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Premier Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Case_Comment_Time__c</fullName>
        <label>Last Case Comment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Support_Communication__c</fullName>
        <label>Last Support Communication</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_comment__c</fullName>
        <label>Last comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_email__c</fullName>
        <label>Last email</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <label>Level of Effort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>sfLma__License__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_View_Contact_Check__c</fullName>
        <formula>ContactId = $User.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List View Contact Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Login_Access_Granted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Grant login access to the org where Copado is installed, and where you are experiencing the issue.
This access can be granted through My Settings&gt;Grant Account Login Access.  Next to Copado Solutions Support, select 1 week in the dropdown.</inlineHelpText>
        <label>Login Access Granted</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>